@@ -2,6 +2,12 @@
 
 	* src/SDCClospre.cc,
 	  src/SDCClospre.hpp:
+	  Various llospre fixes.
+
+2020-11-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.cc,
+	  src/SDCClospre.hpp:
 	  Minor comment cleanup.
 
 2020-11-21 Philipp Klaus Krause <pkk AT spth.de>
